--- a/Avance JWT/pid_grupo01/src/main/resources/application.properties
+++ b/Avance JWT/pid_grupo01/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=pid_grupo01
-server.port=8090
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url= jdbc:mysql://localhost:3306/bd_proyectointegrador?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+server.port=${PORT:8090}
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
